<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="fragmentViewModel"
            type="klo0812.mlaserna.bayadmuna.pages.login.models.RegistrationViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="@dimen/ui_login_container_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_white_rounded"
                android:padding="@dimen/ui_login_container_padding"
                android:orientation="vertical">

                <TextView
                    style="@style/Style.BayadMuna.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_elements_large"
                    android:text="@string/title_registration"
                    android:gravity="start"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_elements_small"
                    android:hint="@string/field_username">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/Style.BayadMuna.Field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:text="@={fragmentViewModel.username}">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_elements_small"
                    android:hint="@string/field_password">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/Style.BayadMuna.Field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:text="@={fragmentViewModel.password}">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_elements_small"
                    android:hint="@string/field_password_confirm">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/Style.BayadMuna.Field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:text="@={fragmentViewModel.cpassword}">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    style="@style/Style.BayadMuna.Dscp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_elements_xlarge"
                    android:text="@string/dscp_password_requirements"
                    android:gravity="start"/>

                <Button
                    android:id="@+id/mRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_elements_small"
                    android:text="@string/action_register"/>

                <Button
                    android:id="@+id/mBack"
                    style="@style/Style.BayadMuna.Button.TextOnly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_elements_medium"
                    android:text="@string/action_back"/>

            </LinearLayout>

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>