<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="fragmentViewModel"
            type="klo0812.mlaserna.bayadmuna.pages.main.models.SendMoneyViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="@dimen/ui_login_container_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_white_rounded"
                android:padding="@dimen/ui_login_container_padding"
                android:orientation="vertical">

                <TextView
                    style="@style/Style.BayadMuna.Title"
                    android:id="@+id/mTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_elements_large"
                    android:text="@string/title_send_money"
                    android:gravity="start"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_elements_large"
                    android:padding="@dimen/spacing_elements_large"
                    android:background="@drawable/bg_white_rounded">

                    <!-- Currency is set to static for now -->
                    <TextView
                        style="@style/Style.BayadMuna.Wallet.Currency"
                        android:id="@+id/mCurrency"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/spacing_elements_small"
                        android:text="₱"/>

                    <TextView
                        style="@style/Style.BayadMuna.Wallet.Amount"
                        android:id="@+id/mAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/mCurrency"
                        android:text="@{fragmentViewModel.balanceString}"/>

                    <Button
                        android:id="@+id/mShowHideAmount"
                        style="@style/Style.BayadMuna.Button.TextOnly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/mAmount"
                        android:layout_marginTop="@dimen/spacing_elements_small"
                        android:layout_alignParentRight="true"
                        android:clickable="false"
                        android:focusable="false"
                        android:text="@string/dscp_available_amount"/>

                </RelativeLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_elements_small"
                    android:hint="@string/field_recipient">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/Style.BayadMuna.Field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:text="@={fragmentViewModel.target}">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_elements_large"
                    android:hint="@string/field_amount">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/Style.BayadMuna.Field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:text="@={fragmentViewModel.amount}">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/mSend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_elements_small"
                    android:text="@string/action_send_money"/>

            </LinearLayout>

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>